Split files into folders

--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,12 @@
   },
   "content_scripts": [{
     "matches": ["*://tapas.io/series/*", "*://tapas.io/episode/*"],
-    "js": ["mutation.js", "add_rss.js", "main.js"],
-    "css": ["add_rss.css"]
+    "js": [
+      "src/mutation.js", 
+      "src/add_rss.js", 
+      "src/index.js"
+    ],
+    "css": ["css/add_rss.css"]
   }],
   "permissions": []
 }
