--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "web-ext run -f ${FIREFOX:-firefox}",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:cypress",
+    "test:cypress": "cypress run -b ${BROWSER:-firefox} --record false"
   },
   "repository": {
     "type": "git",
