--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "npm run test:cypress",
-    "test:cypress": "cypress run -b ${BROWSER:-firefox} --record false"
+    "test:cypress": "cypress run -b ${BROWSER:-firefox}"
   },
   "repository": {
     "type": "git",
