add eslint exception for test files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,11 @@
         "sourceType": "module"
     },
     "rules": {
-    }
+    },
+    "overrides": [{
+        "files": ["**/*.spec.js"],
+        "rules": {
+            "no-unused-expressions": "off"
+        }
+    }]
 }
