--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,12 +8,29 @@
     ],
     "globals": {
         "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
+        "SharedArrayBuffer": "readonly",
+        "it": true,
+        "describe": true,
+        "expect": true,
+        "sinon": true,
+        "before": true,
+        "beforeEach": true,
+        "after": true,
+        "afterEach": true,
+        "context": true,
+        "cy": true,
+        "Cypress": true
     },
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "rules": {
-    }
+    },
+    "overrides": [{
+        "files": ["**/*.spec.js"],
+        "rules": {
+            "no-unused-expressions": "off"
+        }
+    }]
 }
