--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ node_modules/
 # dotenv environment variables file
 .env
 .env.test
+
+# Cypress result file directories
+cypress/screenshots
+cypress/videos
+tests/integration/screenshots
+tests/integration/videos
