Add cypress eslint plugin

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cypress": "^4.8.0",
     "eslint": "^7.2.0",
     "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -42,5 +43,6 @@
       "pre-commit": "npm run lint",
       "pre-push": "npm run test:unit"
     }
-  }
+  },
+  "dependencies": {}
 }
