--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "es6": true
     },
     "extends": [
-        "standard"
+        "standard",
+        "plugin:cypress/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -25,6 +26,7 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
+    "plugins": ["cypress"],
     "rules": {
     },
     "overrides": [{
