--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,6 +1,11 @@
 name: Cypress tests
-on: 
-  - push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   cypress-run:
     runs-on: ubuntu-16.04
