Add build goal and artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ cypress/screenshots
 cypress/videos
 tests/integration/screenshots
 tests/integration/videos
+
+# Webextension build files
+web-ext-artifacts/
