Update cypress action ubuntu version

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,7 +8,7 @@ on:
       - master
 jobs:
   cypress-run:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     strategy: 
       matrix: 
         browser: ['chrome', 'firefox']
