--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,7 @@
 name: Node CI
 
 on: 
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  - push
 jobs:
   build:
     runs-on: ubuntu-latest
