Add retry config and no headless mode

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,4 +21,5 @@ jobs:
         with:
           config-file: cypress.json
           browser: ${{ matrix.browser }}
+          headless: false
           record: false
