--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           config-file: cypress.json
           browser: ${{ matrix.browser }}
-          headless: false
           record: false
+          command: BROWSER=${{ matrix.browser }} npm run test:cypress -- --headed
