--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/victal/tapas-rss#readme",
   "devDependencies": {
+    "axios": "^0.24.0",
     "chai": "^4.3.4",
     "cypress": "^9.2.0",
     "eslint": "^7.32.0",
@@ -36,11 +37,9 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-watch": "^7.0.0",
-    "got": "^11.8.3",
     "husky": "^7.0.4",
     "mocha": "^9.1.3",
     "rss-parser": "^3.12.0",
     "web-ext": "^6.6.0"
-  },
-  "dependencies": {}
+  }
 }
