--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,15 @@
     "css": ["css/add_rss.css"],
     "all_frames": true
   }],
-  "permissions": []
+  "permissions": [
+    "storage"
+  ],
+  "options_ui": {
+    "page": "src/options/index.html"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{395c081e-9f3b-4218-9587-bcbfa467c3b6}"
+    }
+  }
 }
