--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/victal/tapas-rss#readme",
   "devDependencies": {
+    "@victal/cypress-extensions-plugin": "^0.1.6",
     "axios": "^1.3.5",
     "chai": "^4.3.7",
     "cypress": "^12.9.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
@@ -41,5 +43,8 @@
     "mocha": "^10.2.0",
     "rss-parser": "^3.13.0",
     "web-ext": "^7.6.1"
+  },
+  "dependencies": {
+    "browserify-versionify": "^1.0.6"
   }
 }
