--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.4
       - name: Build manifest
-        run: npm run manifest:${{ matrix.browser }}
+        run: npm run manifest
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
