--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.4
+      - name: Build manifest
+        run: npm run manifest
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
