--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "A webextension to add an rss button to tapas.io webcomics pages",
   "main": "",
   "scripts": {
-    "build": "web-ext build -o -i tests/ cypress/ images/ node_modules/ package.json README.md package-lock.json cypress.json",
-    "dev": "web-ext run -f ${FIREFOX:-firefox}",
+    "build": "npm run build:firefox && npm run build:chrome",
+    "build:firefox": "npm run manifest:firefox && web-ext build -a web-ext-artifacts/firefox",
+    "build:chrome": "npm run manifest:chrome && web-ext build -a web-ext-artifacts/chrome",
+    "dev": "npm run manifest:firefox && web-ext run -f ${FIREFOX:-firefox}",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "manifest": "npm run manifest:firefox && npm run manifest:chrome",
+    "manifest:firefox": "node scripts/merge_manifests.js manifests/common.json manifests/firefox.json && cp manifest.json manifest-firefox.json",
+    "manifest:chrome": "node scripts/merge_manifests.js manifests/common.json manifests/chrome.json && cp manifest.json manifest-chrome.json",
     "test": "npm run test:unit && npm run test:cypress",
     "test:unit": "mocha tests/unit/**/*.spec.js",
-    "test:cypress": "cypress run -b ${BROWSER:-firefox}",
-    "cypress:open": "cypress open"
+    "test:cypress": "npm run manifest:firefox && cypress run -b ${BROWSER:-firefox}",
+    "cypress:open": "npm run manifest && cypress open"
   },
   "repository": {
     "type": "git",
