--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,8 @@ updates:
         update-types: ["version-update:semver-major"]
       - dependency-name: "eslint" # Due to dependency from addons-linter
         update-types: ["version-update:semver-major"]
+      - dependency-name: "eslint-plugin-n" # Due to https://github.com/standard/eslint-config-standard/pull/408
+        update-types: ["version-update:semver-major"]
 
   - package-ecosystem: "github-actions"
     directory: "/"
